리뷰 뷰어 - 뷰어 오픈 시 댓글 입력 초기화

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -1355,6 +1355,7 @@
         let loginUser = [[${loginUser.id}]] === 'anonymousUser' ? "로그인 후 이용해주세요." : [[${loginUser.id}]];
         let loginUserProfile = [[${loginUser.profileImg}]] === null ? null : [[${loginUser.profileImg}]];
         $('#comment-wrap').html("");
+        $('#comment-content').html('');
 
         let promise = new Promise((resolve) => {
             $.ajax({
