여행 정보 목록 페이지 ui 개선

--- a/src/main/resources/templates/tourinfo/content.html
+++ b/src/main/resources/templates/tourinfo/content.html
@@ -448,6 +448,14 @@
             width: 100%;
         }
 
+        #detailInfo th {
+            width: 10%;
+        }
+
+        #detailInfo td {
+            width: 40%;
+        }
+
     </style>
 
     <title>관광지 정보 | 둘레둘레</title>
