--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -336,13 +336,17 @@
             display: flex;
             gap: 30px;
             align-items: flex-start;
+            position: relative;
         }
 
         #tagSelector {
             border: 1px solid #DDDDDD;
             border-radius: 20px;
-            width: 30%;
+            width: 35%;
             height: auto;
+            position: absolute;
+            top: 0;
+            right: -15%;
         }
 
         #content_type, #category, #sigungu {
@@ -362,31 +366,37 @@
         .thumbnail {
             width: 150px;
             height: 100px;
+            margin: 5px 20px 5px 0;
         }
 
         #touritems {
-            width: 70%;
+            width: 75%;
         }
 
-        .touritem-no-contents > p {
+        .touritem-no-contents {
             margin: 0;
             text-align: center;
+            padding: 10px 0;
         }
 
-        .touritem-contents > p {
+        .touritem-contents {
+            padding: 10px 0;
+            height: 110px;
+        }
+
+        .touritem-contents > * {
             margin: 0;
         }
 
         .touritem-img {
+            border: 0;
             width: 150px;
         }
-
-        .list_title {
-            font-weight: 700;
+        .table th, .table td {
+            padding: 0;
         }
-
-        .list_address, .list_category {
-            font-weight: 400;
+        .table th{
+            padding-right: 25px;
         }
 
         .btn-2 {
@@ -460,7 +470,7 @@
 <!--<th:block th:replace="~{fragments/header}"></th:block>-->
 <div class="d-flex flex-nowrap">
     <th:block th:replace="~{fragments/sidebar}"></th:block>
-    <div id="wrap">
+    <div id="wrap" class="container">
         <div class="flex-box">
             <h2 id="areaName" th:text="${selectedArea.areaName}"></h2>
             <!-- Button trigger modal -->
@@ -486,51 +496,40 @@
                 </div>
                 <table class="table">
                     <thead>
-                    <tr>
-                        <th scope="col">대표이미지</th>
-                        <th scope="col">관광정보</th>
-                    </tr>
+                        <tr>
+                            <th scope="col">대표이미지</th>
+                            <th scope="col">관광정보</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    <th:block th:if="${pageResponse.total > 0}" th:each="touritem : ${pageResponse.dtoList}">
-                        <tr>
-                            <td rowspan="3" class="touritem-img">
-                                <a onclick="saveSearchInfo()" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
-                                    <img class="thumbnail"
-                                         th:if="${touritem.firstimage == null || touritem.firstimage.isEmpty()}"
-                                         src="../../assets/img/no_img.jpg">
-                                    <img class="thumbnail"
-                                         th:unless="${touritem.firstimage == null || touritem.firstimage.isEmpty()}"
-                                         th:src="${touritem.firstimage}">
-                                </a>
-                            </td>
-                            <td class="touritem-contents">
-                                <a onclick="saveSearchInfo()" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
-                                    <h5 th:text="${touritem.title}"></h5>
-                                </a>
-                            </td>
-                            <td rowspan="3" class="touritem-bookmark-count">
-                                <p th:text="${touritem.bookmarkCount}"></p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="touritem-contents">
-                                <p th:text="${touritem.address}"></p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="touritem-contents">
-                                <p th:text="${touritem.fullCategoryName}"></p>
-                            </td>
-                        </tr>
-                    </th:block>
-                    <th:block th:unless="${pageResponse.total > 0}">
-                        <tr>
-                            <td colspan="2" class="touritem-no-contents">
-                                <p>검색된 관광지 정보가 없습니다.</p>
-                            </td>
-                        </tr>
-                    </th:block>
+                        <th:block th:if="${pageResponse.total > 0}" th:each="touritem : ${pageResponse.dtoList}">
+                            <tr>
+                                <td class="touritem-img">
+                                    <a onclick="saveSearchInfo()" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
+                                        <img class="thumbnail"
+                                             th:if="${touritem.firstimage == null || touritem.firstimage.isEmpty()}"
+                                             src="../../assets/img/no_img.jpg">
+                                        <img class="thumbnail"
+                                             th:unless="${touritem.firstimage == null || touritem.firstimage.isEmpty()}"
+                                             th:src="${touritem.firstimage}">
+                                    </a>
+                                </td>
+                                <td class="touritem-contents d-flex flex-column justify-content-center">
+                                    <a onclick="saveSearchInfo()" th:href="@{/info/content/{contentid}(contentid=${touritem.contentid})}">
+                                        <h5 th:text="${touritem.title}"></h5>
+                                    </a>
+                                    <p th:text="${touritem.address}"></p>
+                                    <p th:text="${touritem.fullCategoryName}"></p>
+                                </td>
+                            </tr>
+                        </th:block>
+                        <th:block th:unless="${pageResponse.total > 0}">
+                            <tr>
+                                <td colspan="2" class="touritem-no-contents">
+                                    <p>검색된 관광지 정보가 없습니다.</p>
+                                </td>
+                            </tr>
+                        </th:block>
                     </tbody>
                 </table>
                 <nav aria-label="page-bar" class="d-flex justify-content-center mt-4 mb-4">
