리뷰 관련 api 수정

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -801,11 +801,8 @@
 
         let promise = new Promise((resolve) => {
             $.ajax({
-                url : '/api/review/view_count',
+                url : `/api/review/${selectedReviewId}/view-count`,
                 type : 'PUT',
-                data : {
-                    reviewId : selectedReviewId
-                },
                 success : function (viewCount) {
                     resolve();
                 },
@@ -831,11 +828,8 @@
     }
     function loadDetailReview(){
         $.ajax({
-            url : '/api/review/detail',
+            url : `/api/review/${selectedReviewId}`,
             type : 'GET',
-            data : {
-                reviewId : selectedReviewId
-            },
             contentType : 'application/json; charset=UTF-8',
             success : function (findReview) {
                 let writer = findReview.userInfo;
@@ -1475,11 +1469,8 @@
 
     function showTourItemSimpleInfo(tourItemId){
         $.ajax({
-            url : '/api/review/simple-touritem',
+            url : `/api/review/simple-touritem/${tourItemId}`,
             type : 'GET',
-            data : {
-                tourItemId : tourItemId
-            },
             contentType : 'application/json; charset=UTF-8',
             success : function (tourItem){
                 $('#touritem-info-img').attr('src',tourItem.firstimage);
@@ -1498,17 +1489,14 @@
         const deleteConfirm = confirm("리뷰를 삭제하시겠습니까?");
         if(deleteConfirm){
             $.ajax({
-                url : '/api/review/delete',
+                url : `/api/review/${selectedReviewId}`,
                 type : 'DELETE',
-                data : {
-                    reviewId : selectedReviewId
-                },
                 success : function (){
                     alert('삭제 되었습니다.')
                     savePage();
                     $('#viewer').modal('toggle');
                     changeTab(tabType);
-                    setScrollByFeedInfo();
+                    setScrollByMyPageInfo();
                 },
                 error : function (){
                     alert('삭제에 실패했습니다.')
@@ -1768,7 +1756,7 @@
 
     function showSelectList(){
         $.ajax({
-            url : '/api/review/show_list',
+            url : '/api/review/me/show-list',
             type : 'GET',
             contentType : 'application/json; charset=UTF-8',
             success : function (result) {
@@ -1890,10 +1878,10 @@
     function AddPlanList(){
         let promise = new Promise((resolve) => {
             $.ajax({
-                url : '/api/review/show_plan',
+                url : '/api/review/me/show-plan',
                 type : 'GET',
                 data : {
-                    bookId : selectedBookId
+                    bookid : selectedBookId
                 },
                 contentType : 'application/json; charset=UTF-8',
                 success : function (result) {
@@ -1959,7 +1947,7 @@
         console.log(formData)
 
         $.ajax({
-            url : '/api/review/create',
+            url : '/api/review',
             type : 'POST',
             data : formData,
             processData : false,
