--- a/src/main/resources/templates/review/reviewbook.html
+++ b/src/main/resources/templates/review/reviewbook.html
@@ -772,11 +772,8 @@
 
         let promise = new Promise((resolve) => {
             $.ajax({
-                url : '/api/review/view_count',
+                url : `/api/review/${selectedReviewId}/view-count`,
                 type : 'PUT',
-                data : {
-                    reviewId : selectedReviewId
-                },
                 success : function (viewCount) {
                     resolve();
                 },
@@ -802,11 +799,8 @@
     }
     function loadDetailReview(){
         $.ajax({
-            url : '/api/review/detail',
+            url : `/api/review/${selectedReviewId}`,
             type : 'GET',
-            data : {
-                reviewId : selectedReviewId
-            },
             contentType : 'application/json; charset=UTF-8',
             success : function (findReview) {
                 let writer = findReview.userInfo;
@@ -1443,11 +1437,8 @@
 
     function showTourItemSimpleInfo(tourItemId){
         $.ajax({
-            url : '/api/review/simple-touritem',
+            url : `/api/review/simple-touritem/${tourItemId}`,
             type : 'GET',
-            data : {
-                tourItemId : tourItemId
-            },
             contentType : 'application/json; charset=UTF-8',
             success : function (tourItem){
                 $('#touritem-info-img').attr('src',tourItem.firstimage);
@@ -1466,17 +1457,11 @@
         const deleteConfirm = confirm("리뷰를 삭제하시겠습니까?");
         if(deleteConfirm){
             $.ajax({
-                url : '/api/review/delete',
+                url : `/api/review/${selectedReviewId}`,
                 type : 'DELETE',
-                data : {
-                    reviewId : selectedReviewId
-                },
                 success : function (){
-                    alert('삭제 되었습니다.')
-                    savePage();
-                    $('#viewer').modal('toggle');
-                    changeTab(tabType);
-                    setScrollByFeedInfo();
+                    alert('삭제 되었습니다.');
+                    location.reload();
                 },
                 error : function (){
                     alert('삭제에 실패했습니다.')
