--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -1217,11 +1217,8 @@
 
         let promise = new Promise((resolve) => {
             $.ajax({
-                url : '/api/review/view_count',
+                url : `/api/review/${selectedReviewId}/view-count`,
                 type : 'PUT',
-                data : {
-                    reviewId : selectedReviewId
-                },
                 success : function (viewCount) {
                     resolve();
                 },
@@ -1247,11 +1244,8 @@
     }
     function loadDetailReview(){
         $.ajax({
-            url : '/api/review/detail',
+            url : `/api/review/${selectedReviewId}`,
             type : 'GET',
-            data : {
-                reviewId : selectedReviewId
-            },
             contentType : 'application/json; charset=UTF-8',
             success : function (findReview) {
                 let writer = findReview.userInfo;
@@ -1892,11 +1886,8 @@
 
     function showTourItemSimpleInfo(tourItemId){
         $.ajax({
-            url : '/api/review/simple-touritem',
+            url : `/api/review/simple-touritem/${tourItemId}`,
             type : 'GET',
-            data : {
-                tourItemId : tourItemId
-            },
             contentType : 'application/json; charset=UTF-8',
             success : function (tourItem){
                 $('#touritem-info-img').attr('src',tourItem.firstimage);
@@ -1915,11 +1906,8 @@
         const deleteConfirm = confirm("리뷰를 삭제하시겠습니까?");
         if(deleteConfirm){
             $.ajax({
-                url : '/api/review/delete',
+                url : `/api/review/${selectedReviewId}`,
                 type : 'DELETE',
-                data : {
-                    reviewId : selectedReviewId
-                },
                 success : function (){
                     alert('삭제 되었습니다.')
                     savePageInfoToSession();
