[수정] rest api 규칙에 따라 planner 관련 수정중

--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -838,7 +838,7 @@
     function loadPlanForDay() {
         $.ajax({
             type: "GET",
-            url: "/api/allShowplan",
+            url: "/api/planner/" + plannerId,
             contentType: 'application/json; charset=UTF-8',
             data: {
                 "plannerId": plannerId
