--- a/src/main/resources/templates/plan/showplan.html
+++ b/src/main/resources/templates/plan/showplan.html
@@ -720,7 +720,7 @@
     function loadPlanForDay() {
         $.ajax({
             type: "GET",
-            url: "/api/allShowplan",
+            url: "/api/planner/" + plannerId,
             contentType: 'application/json; charset=UTF-8',
             data: {
                 "plannerId": plannerId
