--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -705,7 +705,7 @@
         formData.append("bookTitle", bookTitle);
 
         $.ajax({
-            url: '/api/book/create',
+            url: '/api/book',
             type: 'POST',
             data: formData,
             processData: false,
@@ -1415,7 +1415,7 @@
                     $('#review-book-info').addClass('cursor-pointer')
                     $('#review-book-info').off().click(function (){
                         savePage
-                        location.href = `../book?bookId=${findReview.reviewBookId}`;
+                        location.href = `../book?bookid=${findReview.reviewBookId}`;
                     })
                     $('#review-book-title').text(findReview.reviewBookTitle);
                     if(findReview.reviewBookCoverImg != null){
@@ -1512,7 +1512,7 @@
                 if(commentList.length > 0){
                     $.each(commentList, function (index, comment){
                         if(comment.cmtDel){
-                            let tempHtml = '<div class="comment-info deleted-comment">삭제된 댓글 입니다.</div>'
+                            let tempHtml = '<div class="comment-info"><div class="d-flex deleted-comment">삭제된 댓글 입니다.</div></div>'
                             $('#comment-wrap').append(tempHtml);
                         }else {
                             let profileImg;
@@ -1527,11 +1527,13 @@
                                 '<div class="comment-info">' +
                                 '<div class="d-flex">' +
                                 '<div class="rounded-circle icon-img comment-profile">' +
+                                `<a href="/mypage/${comment.writer.id}">` +
                                 `<img src="${profileImg}" alt="...">` +
+                                '</a>' +
                                 '</div>' +
                                 `<div class="comment-text" data-comment-id="${comment.commentId}">` +
                                 '<div class="d-flex justify-content-between gap-2">' +
-                                `<span class="comment-writer me-3">@${comment.writer.id}</span>` +
+                                `<a href="/mypage/${comment.writer.id}" class="comment-writer me-3">@${comment.writer.id}</a>` +
                                 '<div class="d-flex">' +
                                 `<span class="comment-regdate">${regDate}</span>`;
 
@@ -1669,14 +1671,16 @@
                 }
 
                 let tempHtml =
-                    '<div class="comment-info temp-reply">' +
+                    `<div class="comment-info temp-reply" data-comment-id="${reply.commentId}">` +
                     '<div class="d-flex">' +
                     '<div class="rounded-circle icon-img comment-profile">' +
+                    `<a href="/mypage/${reply.writer.id}">` +
                     `<img src="${profileImg}" alt="...">` +
+                    '</a>' +
                     '</div>' +
                     `<div class="comment-text" data-comment-id="${reply.commentId}">` +
                     '<div class="d-flex justify-content-between gap-2">' +
-                    `<span class="comment-writer me-3">@${reply.writer.id}</span>` +
+                    `<a href="/mypage/${reply.writer.id}" class="comment-writer me-3">@${reply.writer.id}</a>` +
                     '<div class="d-flex">' +
                     `<span class="comment-regdate">${regDate}</span>`;
 
@@ -1740,14 +1744,14 @@
     // 답글 삭제
     $(document).on('click','.comment-delete', function (){
         let commentId = $(this).closest('.comment-text').attr('data-comment-id');
-        let commentInfo = $(this).closest('.comment-info');
+        let comment = $(this).closest('.comment-info').children('.d-flex').first();
 
         $.ajax({
             url : `/api/comments/${commentId}`,
             type : 'DELETE',
             success : function (){
-                $(commentInfo).addClass('deleted-comment');
-                $(commentInfo).html('삭제된 댓글 입니다.');
+                $(comment).addClass('deleted-comment');
+                $(comment).html('삭제된 댓글 입니다.');
             },
             error : function (err){
                 alert("댓글 삭제에 실패했습니다.");
@@ -1833,8 +1837,10 @@
             success : function (result){
                 let replyList = result.dtoList;
                 $.each(replyList, function (index, reply){
+                    // 답글 작성 시 임시로 추가된 답글이 더보기로 정상 출력되면 삭제.
+                    $(`.reply-wrap[data-group="${group}"]`).find(`.temp-reply[data-comment-id="${reply.commentId}"]`).remove();
                     if(reply.cmtDel){
-                        let tempHtml = '<div class="comment-info deleted-comment">삭제된 댓글 입니다.</div>'
+                        let tempHtml = '<div class="comment-info"><div class="d-flex deleted-comment">삭제된 댓글 입니다.</div></div>'
                         $(`.reply-wrap[data-group="${group}"]`).append(tempHtml);
                     }else {
                         let profileImg;
@@ -1849,11 +1855,13 @@
                             '<div class="comment-info">' +
                             '<div class="d-flex">' +
                             '<div class="rounded-circle icon-img comment-profile">' +
+                            `<a href="/mypage/${reply.writer.id}">` +
                             `<img src="${profileImg}" alt="...">` +
+                            '</a>' +
                             '</div>' +
                             `<div class="comment-text" data-comment-id="${reply.commentId}">` +
                             '<div class="d-flex justify-content-between gap-2">' +
-                            `<span class="comment-writer me-3">@${reply.writer.id}</span>` +
+                            `<a href="/mypage/${reply.writer.id}" class="comment-writer me-3">@${reply.writer.id}</a>` +
                             '<div class="d-flex">' +
                             `<span class="comment-regdate">${regDate}</span>`;
 
@@ -1888,7 +1896,7 @@
                     $(`.next-reply-btn[data-group="${group}"]`).attr('data-page','last');
                     $(`.next-reply-btn[data-group="${group}"]`).hide();
                 }
-                $(`.more-reply-btn[data-group="${group}"]`).text(`답글 더 보기(${result.total}개)`)
+                $(`.more-reply-btn[data-group="${group}"]`).text(`답글 더 보기(${result.total}개)`);
             },
             error : function (err){
                 console.log(err)
@@ -1901,18 +1909,19 @@
         const info = $(this).closest('.comment-info');
         const page = $(info).children('.next-reply-btn').attr('data-page');
 
-        if($(info).children('.reply-wrap').css('display') === 'none'){
+        if($(info).children('.reply-wrap').hasClass('hide')){
+            $(info).children('.reply-wrap').removeClass('hide');
             $(this).text('답글 접기');
-            $(info).children('.reply-wrap').show();
+            $(info).children('.reply-wrap').children().show();
             if(page !== 'last'){
                 $(info).children('.next-reply-btn').show();
             }
         }else {
+            $(info).children('.reply-wrap').addClass('hide')
             const text = $(info).children('.more-reply-btn').text();
             $(this).text(text);
-            $(info).children('.reply-wrap').hide();
+            $(info).children('.reply-wrap').children().hide();
             $(info).children('.next-reply-btn').hide();
-            info.find('.temp-reply').remove();
         }
     })
 
