--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -837,7 +837,7 @@
                 let regDate = (findReview.regDate === findReview.modDate) ? formatRegDate(findReview.regDate) : formatRegDate(findReview.modDate) + ' (수정됨)';
 
                 $('#writer-info').click(function (){
-                    savePage();
+                    savePage
                     location.href = `/mypage/${writer.id}`
                 })
                 $('#writer-name').text(writer.name);
@@ -863,8 +863,8 @@
                     $('#review-book-info').addClass('d-flex').show();
                     $('#review-book-info').addClass('cursor-pointer')
                     $('#review-book-info').off().click(function (){
-                        savePage();
-                        location.href = `../book?bookId=${findReview.reviewBookId}`;
+                        savePage
+                        location.href = `../book?bookid=${findReview.reviewBookId}`;
                     })
                     $('#review-book-title').text(findReview.reviewBookTitle);
                     if(findReview.reviewBookCoverImg != null){
@@ -961,7 +961,7 @@
                 if(commentList.length > 0){
                     $.each(commentList, function (index, comment){
                         if(comment.cmtDel){
-                            let tempHtml = '<div class="comment-info deleted-comment">삭제된 댓글 입니다.</div>'
+                            let tempHtml = '<div class="comment-info"><div class="d-flex deleted-comment">삭제된 댓글 입니다.</div></div>'
                             $('#comment-wrap').append(tempHtml);
                         }else {
                             let profileImg;
@@ -976,11 +976,13 @@
                                 '<div class="comment-info">' +
                                 '<div class="d-flex">' +
                                 '<div class="rounded-circle icon-img comment-profile">' +
+                                `<a href="/mypage/${comment.writer.id}">` +
                                 `<img src="${profileImg}" alt="...">` +
+                                '</a>' +
                                 '</div>' +
                                 `<div class="comment-text" data-comment-id="${comment.commentId}">` +
                                 '<div class="d-flex justify-content-between gap-2">' +
-                                `<span class="comment-writer me-3">@${comment.writer.id}</span>` +
+                                `<a href="/mypage/${comment.writer.id}" class="comment-writer me-3">@${comment.writer.id}</a>` +
                                 '<div class="d-flex">' +
                                 `<span class="comment-regdate">${regDate}</span>`;
 
@@ -1020,7 +1022,7 @@
                     }
                 }else {
                     let tempHtml =
-                        '<div class="no-comment-msg d-flex mb-2">아직 등록된 댓글이 없습니다.</div>';
+                        '<div class="no-comment-msg d-flex mb-2">아직 등록된 리뷰가 없습니다.</div>';
                     $('#comment-wrap').append(tempHtml);
                 }
             },
@@ -1118,14 +1120,16 @@
                 }
 
                 let tempHtml =
-                    '<div class="comment-info temp-reply">' +
+                    `<div class="comment-info temp-reply" data-comment-id="${reply.commentId}">` +
                     '<div class="d-flex">' +
                     '<div class="rounded-circle icon-img comment-profile">' +
+                    `<a href="/mypage/${reply.writer.id}">` +
                     `<img src="${profileImg}" alt="...">` +
+                    '</a>' +
                     '</div>' +
                     `<div class="comment-text" data-comment-id="${reply.commentId}">` +
                     '<div class="d-flex justify-content-between gap-2">' +
-                    `<span class="comment-writer me-3">@${reply.writer.id}</span>` +
+                    `<a href="/mypage/${reply.writer.id}" class="comment-writer me-3">@${reply.writer.id}</a>` +
                     '<div class="d-flex">' +
                     `<span class="comment-regdate">${regDate}</span>`;
 
@@ -1189,14 +1193,14 @@
     // 답글 삭제
     $(document).on('click','.comment-delete', function (){
         let commentId = $(this).closest('.comment-text').attr('data-comment-id');
-        let commentInfo = $(this).closest('.comment-info');
+        let comment = $(this).closest('.comment-info').children('.d-flex').first();
 
         $.ajax({
             url : `/api/comments/${commentId}`,
             type : 'DELETE',
             success : function (){
-                $(commentInfo).addClass('deleted-comment');
-                $(commentInfo).html('삭제된 댓글 입니다.');
+                $(comment).addClass('deleted-comment');
+                $(comment).html('삭제된 댓글 입니다.');
             },
             error : function (err){
                 alert("댓글 삭제에 실패했습니다.");
@@ -1282,8 +1286,10 @@
             success : function (result){
                 let replyList = result.dtoList;
                 $.each(replyList, function (index, reply){
+                    // 답글 작성 시 임시로 추가된 답글이 더보기로 정상 출력되면 삭제.
+                    $(`.reply-wrap[data-group="${group}"]`).find(`.temp-reply[data-comment-id="${reply.commentId}"]`).remove();
                     if(reply.cmtDel){
-                        let tempHtml = '<div class="comment-info deleted-comment">삭제된 댓글 입니다.</div>'
+                        let tempHtml = '<div class="comment-info"><div class="d-flex deleted-comment">삭제된 댓글 입니다.</div></div>'
                         $(`.reply-wrap[data-group="${group}"]`).append(tempHtml);
                     }else {
                         let profileImg;
@@ -1298,11 +1304,13 @@
                             '<div class="comment-info">' +
                             '<div class="d-flex">' +
                             '<div class="rounded-circle icon-img comment-profile">' +
+                            `<a href="/mypage/${reply.writer.id}">` +
                             `<img src="${profileImg}" alt="...">` +
+                            '</a>' +
                             '</div>' +
                             `<div class="comment-text" data-comment-id="${reply.commentId}">` +
                             '<div class="d-flex justify-content-between gap-2">' +
-                            `<span class="comment-writer me-3">@${reply.writer.id}</span>` +
+                            `<a href="/mypage/${reply.writer.id}" class="comment-writer me-3">@${reply.writer.id}</a>` +
                             '<div class="d-flex">' +
                             `<span class="comment-regdate">${regDate}</span>`;
 
@@ -1337,7 +1345,7 @@
                     $(`.next-reply-btn[data-group="${group}"]`).attr('data-page','last');
                     $(`.next-reply-btn[data-group="${group}"]`).hide();
                 }
-                $(`.more-reply-btn[data-group="${group}"]`).text(`답글 더 보기(${result.total}개)`)
+                $(`.more-reply-btn[data-group="${group}"]`).text(`답글 더 보기(${result.total}개)`);
             },
             error : function (err){
                 console.log(err)
@@ -1350,18 +1358,19 @@
         const info = $(this).closest('.comment-info');
         const page = $(info).children('.next-reply-btn').attr('data-page');
 
-        if($(info).children('.reply-wrap').css('display') === 'none'){
+        if($(info).children('.reply-wrap').hasClass('hide')){
+            $(info).children('.reply-wrap').removeClass('hide');
             $(this).text('답글 접기');
-            $(info).children('.reply-wrap').show();
+            $(info).children('.reply-wrap').children().show();
             if(page !== 'last'){
                 $(info).children('.next-reply-btn').show();
             }
         }else {
+            $(info).children('.reply-wrap').addClass('hide')
             const text = $(info).children('.more-reply-btn').text();
             $(this).text(text);
-            $(info).children('.reply-wrap').hide();
+            $(info).children('.reply-wrap').children().hide();
             $(info).children('.next-reply-btn').hide();
-            info.find('.temp-reply').remove();
         }
     })
 
@@ -1453,7 +1462,7 @@
         if(tourItemId !== undefined){
             $('#touritem-wrap').css('cursor','pointer');
             $('#touritem-wrap').click(function (){
-                savePage();
+                savePage
                 location.href = `../info/content/${tourItemId}`;
             })
             touritemInfoTimer = setTimeout(function () {
@@ -1496,7 +1505,7 @@
                     savePage();
                     $('#viewer').modal('toggle');
                     changeTab(tabType);
-                    setScrollByMyPageInfo();
+                    setScrollByFeedInfo();
                 },
                 error : function (){
                     alert('삭제에 실패했습니다.')
@@ -1605,7 +1614,7 @@
 
     function showPlannerList() {
         $.ajax({
-            url : '/api/book/show_planner',
+            url : '/api/book/me/show-planner',
             type : 'GET',
             success : function (plannerList) {
                 if(plannerList.length > 0){
@@ -1672,7 +1681,7 @@
         }
 
         $.ajax({
-            url : '/api/book/create',
+            url : '/api/book',
             type : 'POST',
             data : formData,
             processData : false,
@@ -1858,7 +1867,7 @@
         formData.append("bookTitle", bookTitle);
 
         $.ajax({
-            url : '/api/book/create',
+            url : '/api/book',
             type : 'POST',
             data : formData,
             processData : false,
@@ -2362,7 +2371,7 @@
                         $.each(reviewBookList, function (index, reviewBook){
                             let coverPath = reviewBook.coverFilePath == null ? '../assets/img/review_book_cover.jpg' : `/api/image/book/${reviewBook.coverFilePath}`;
                             let tempHtml = `<div class="review-book-item" tabIndex="0">` +
-                                        `<a href="/book?bookId=${reviewBook.bookId}">` +
+                                        `<a href="/book?bookid=${reviewBook.bookId}">` +
                                         `<img src="${coverPath}"/>` +
                                         `<p>${reviewBook.bookTitle}</p>` +
                                         `</a>`
